# TSAVideoGame

./: .gitignore  CMakeLists.txt  README.md  help.html  jin.js  jin.wasm  test.js  test.wasm
.github/workflows/: main.yml
libs/JEL/: component.h  context.h  core.h  entity.h  entity_magic.h  error.h  hierarchy.h  jel.h  prefab.h  table.h  type.h  utility.h
libs/JEL/component/: component.h  component_stack.h  component_struct.h  component_types.h  component_utility.h
libs/JEL/table/: fragment.h  fragment_update_pointers.h  query.h  table.h
libs/glew/: glew.c
res/animations/: guard.animd  player.animd  player.animd.txt
res/maps/: lvl10.tgmf  lvl2.tgmf  lvl3.tgmf  lvl4.tgmf  lvl5.tgmf  lvl6.tgmf  lvl7.tgmf  lvl8.tgmf  lvl9.tgmf  test_map.tgmf  title.tgmf
res/models/: space_ship.mdld  space_ship.mdld.txt  square.mdld.txt
res/shaders/: 3d.shdr  3d_f.glsl  3d_v.glsl  sprite_f.glsl  sprite_v.glsl  test.shdr  test_f.glsl
src/: driver.c  driver_web.c  globals.c  globals.h
src/anim/: anim.c  anim.h
src/components/: components.c  components.h
src/core/: core.c  core.h  globals.c  globals.h  input.h  logger.c  logger.h
src/core/env/: env.c  env.h  env_x11.c  env_x11.h
src/core/event/: event.c  event.h  event_win32.c  event_x11.c
src/core/gll/: gll.c  gll.h
src/core/inits/: core_init_jel.c  core_init_res.c  core_init_states.c
src/core/input/: input.c  input.h  input_em.c  input_win32.c  input_x11.c
src/core/thread/: thread_unix.c  thread_win32.c
src/core/window/: window.c  window.h  window_em.c  window_win32.c  window_x11.c
src/gfx/: gfx.c  gfx.h  shader.c  shader.h  sprite.c  sprite.h  texture.c  texture.h
src/recore/: recore.c  recore.h
src/resm/: resm.c  resm.h
src/resource_manager/: resm.c  resm.h
src/snd/: snd.c  snd.h  wav_loader.c  wav_util.c  wav_util.h
src/sound/: snd.c  snd.h  wav_loader.c  wav_loader.h
src/stm/: states.c  states.h  stm.c  stm.h
src/stm/states/: 3d.c  animation.c  game_over.c  game_sus.c  game_win.c  img.c  level_select.c  main_menu.c  museum.c  pause.c  template.c  tile.h
src/stm/states/maps/: lvl_1.c  lvl_2.c  lvl_3.c  lvl_4.c  map.c  test_map.c
src/stm/states/modules/: guards.c  lighting.c  player.c
src/ui/: button.c  button.h
